--- a/settings.gradle
+++ b/settings.gradle
@@ -36,6 +36,8 @@ include "spring-webmvc"
 include "spring-websocket"
 include "framework-bom"
 include "integration-tests"
+/* 引入自定义module：spring-debug */
+include 'spring-debug'
 
 rootProject.name = "spring"
 rootProject.children.each {project ->
